Update cordova-plugin-file dependency

--- a/package.json
+++ b/package.json
@@ -32,7 +32,11 @@
   "license": "Apache-2.0",
   "engines": {
     "cordovaDependencies": {
-      "3.0.0": {
+      "1.2.0":{
+        "cordova": ">=7.1.0",
+        "cordova-android": ">=6.3.0"
+      },
+      "2.0.0": {
         "cordova": ">100"
       }
     }
